[package]
name = "FemBSOD"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = "2.9"
rayon = "1.8"
walkdir = "2.4"
image = { version = "0.24", features = ["jpeg", "png", "bmp"] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_System_Services",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_System_Wmi",
    "Win32_UI_Input_KeyboardAndMouse",
] }
